# OrderScanningPal

./: .gitignore  README.md  package-lock.json  package.json  todo.md
src/: App.css  App.tsx  Layout.tsx  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  print.rs  serial_number_files.rs  settings.rs  sql.rs  structs.rs
src/components/: MyAlert.tsx
src/pages/: MainPage.tsx  PrintingPage.tsx  SettingsPage.tsx  WelcomePage.tsx
