[package]
name = "orderscanningpal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orderscanningpal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tiberius = "0.12"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
log = { version = "0.4", features = ["std", "serde"] }
walkdir = "2"
chrono = { version = "0.4", features = ["unstable-locales"] }
printers = "2.2"
dotenvy = "0.15"
once_cell = "1.19.0"
